initial commit with ADASE Group info

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Advanced Data Analytics in Science and Engineering group at Skoltech, Moscow
 ---
 <div class="blurb">
-	<h1>Hi there, This is ADASE Group web page</h1>
+	<h1>Advanced Data Analytics in Science and Engineering group web page</h1>
 	<p>\sadasd <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
