index.html first changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Advanced Data Analytics in Science and Engineering group at Skoltech, Moscow
 ---
 <div class="blurb">
-	<h1>Advanced Data Analytics in Science and Engineering group web page</h1>
-	<p>\sadasd <a href="/about">Read more about my life...</a></p>
+	<h1>Advanced Data Analytics in Science and Engineering group</h1>
+	<p>This is a web site of the ADASE science group at Skoltech, Moscow </p>
 </div><!-- /.blurb -->
