index.html minor changes

--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
       <header>
         <h1>ADASE science group web page</h1>
         <p>Advanced Data Analytics in Science and Engineering group at Skoltech, Moscow</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
-        <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
-        </ul>
+        <p class="view"><a href="http://github.com/adasegroup">View the Group on GitHub <small>adasegroup</small></a></p>
       </header>
       <section>
         <h1>GitHub Flavored Markdown</h1>
