index.html minor changes 3

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <h1>ADASE science group web page</h1>
         <p>Advanced Data Analytics in Science and Engineering group at Skoltech, Moscow</p>
         <p class="view"><a href="http://github.com/adasegroup">View the Group on GitHub <small>adasegroup</small></a></p>
+	 <ul>
+          <li><a href="https://github.com/orderedlist/minimal/zipball/master"><strong>Publications</strong></a></li>
+          <li><a href="https://github.com/orderedlist/minimal/tarball/master"><strong>Projects</strong></a></li>
+          <li><a href="http://github.com/orderedlist/minimal"><strong>Memebers</strong></a></li>
+        </ul>
       </header>
       <section>
         <h1>GitHub Flavored Markdown</h1>
