minor changes index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ permalink: /
 
 <div class="home">
 	
-<h1>Welcome</h1>
+<h1>Machine Learning for Advanced Data Analytics in Science and Engineering group at Skoltech, Moscow</h1>
 
 <p>Here some information about our group etc. </p>	
 
