--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ permalink: /
 
 <div class="home">
 	
-<h1>Machine Learning for Advanced Data Analytics in Science and Engineering group at Skoltech, Moscow</h1>
-
+<h1>Welcome to the website of \n Advanced Data Analytics in Science and Engineering group</h1>
+<h2> Skoltech, Moscow, Russia </h2>
 <p>Here some information about our group etc. </p>	
 
 </div>
