--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ permalink: /
 
 <div class="home">
 	
-<h1>Welcome to the website of \n Advanced Data Analytics in Science and Engineering group</h1>
+<h1>Welcome to the website of</h1> 
+<h1>Advanced Data Analytics in Science and Engineering group</h1>
 <h2> Skoltech, Moscow, Russia </h2>
 <p>Here some information about our group etc. </p>	
 
