--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@ permalink: /
 
 <div class="home">
 	
-<h1>Welcome to the website of</h1> 
-<h1>Advanced Data Analytics in Science and Engineering group</h1>
-	<h2> Skoltech, Moscow, Russia </h2>
-		<p>Our team consists of researchers and developers, among them PhD students, </p> 
-<h1> We have competences in </h1>
-	<h2> Various branches of ML and Scientific Computing including</h2>
+<h1>Advanced Data Analytics in Science and Engineering Group</h1>
+	<h2>at Skoltech, Moscow, Russia </h2>
+		<p>A research team consisting of academic experts, doctoral students and developers.</p> 
+<h1>Research area</h1>
+	<h2>Machine Learning and Scientific Computing with a focus on</h2>
 		<p>- Surrogate (Proxy) Modelling and Optimization</p>
 		<p>- Deep Neural Networks, including Reinforcement Learning</p>
 		<p>- Anomaly Detection and Failures prediction</p>
 		<p>- Tensor Models in ML</p>
 		<p>- Graph Mining</p>
 		<p>- Recommendations/Ranking</p>
-	<h2>- Considerable experience of</h2>
+<h1>Industry Emphasis</h1>
 		<p>- Solving applied problems</p>
-		<p>- Development of Industrial Solutions</p>
-		<p>- Management of R&D projects (mainly with big international companies)</p>
+		<p>- Development of industrial solutions</p>
+		<p>- Management of R&D projects jointly with large international companies</p>
 </div>
 	
