--- a/gpg-seminar/index.html
+++ b/gpg-seminar/index.html
@@ -1,7 +1,5 @@
-<style>
-    #myFrame { width:100%; height:100%; }
-</style>
-
 <html>
-<iframe id="myFrame" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeeBbpqI11u2hg1XEMt5EDJAb_YCrT8PIBvPwruTujfwG0k49C-Q_e0mAXmpryXsvVCrLdXfETDy5u/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<body style="margin:0px;padding:0px;overflow:hidden">
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeeBbpqI11u2hg1XEMt5EDJAb_YCrT8PIBvPwruTujfwG0k49C-Q_e0mAXmpryXsvVCrLdXfETDy5u/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+</body>
 </html>
