--- a/gpg-seminar/index.html
+++ b/gpg-seminar/index.html
@@ -1,7 +1,7 @@
 <html>
 <body style="margin:0px;padding:0px;overflow:hidden">
   
-<p><img src="adase.jpg"></p> 
+<p><img src="adase.jpg" width=30% height=30%></p> 
 <p><a href="https://t.me/gpg_seminar">Telegram Channel</a></p>  
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeeBbpqI11u2hg1XEMt5EDJAb_YCrT8PIBvPwruTujfwG0k49C-Q_e0mAXmpryXsvVCrLdXfETDy5u/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
 </body>
