--- a/bayes/index.html
+++ b/bayes/index.html
@@ -3,7 +3,7 @@
 <p align="center"><img src="http://adase.group/gpg-seminar/adase.jpg" width=35% height=25%></p> 
 <body style="margin:15px;padding:15px;overflow:hidden">
 <div align="center">
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQLHAI7ur-QTpo27opi8whDw9Y3zc_GCkVa4Ms7wFph4gs7-zrwLbK2-TMNhcCSzRdFbJjkIv2Hk6qp/pubhtml?gid=1765226873&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQLHAI7ur-QTpo27opi8whDw9Y3zc_GCkVa4Ms7wFph4gs7-zrwLbK2-TMNhcCSzRdFbJjkIv2Hk6qp/pubhtml?gid=1765226873&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" height="100%" width="100%"></iframe>
 </div>
 </body>
 </html>
