--- a/gpg-seminar/index.html
+++ b/gpg-seminar/index.html
@@ -1,7 +1,7 @@
 <html>
 <body style="margin:15px;padding:15px;overflow:hidden">
 <p align="center"><img src="adase.jpg" width=35% height=25%></p> 
-<p align="center"><a href="https://t.me/gpg_seminar">Telegram Channel (kek)</a></p>  
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeeBbpqI11u2hg1XEMt5EDJAb_YCrT8PIBvPwruTujfwG0k49C-Q_e0mAXmpryXsvVCrLdXfETDy5u/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"" frameborder="0" scrolling="yes" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+<p align="center"><a href="https://t.me/gpg_seminar">Telegram Channel</a></p>  
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeeBbpqI11u2hg1XEMt5EDJAb_YCrT8PIBvPwruTujfwG0k49C-Q_e0mAXmpryXsvVCrLdXfETDy5u/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"" frameborder="0" scrolling="yes" style="overflow:hidden;height:80%;width:80%" height="80%" width="80%"></iframe>
 </body>
 </html>
