--- a/3ddl/publications.html
+++ b/3ddl/publications.html
@@ -6,7 +6,7 @@ filter:
     id: project-filter
     selector: .project
     child_selector: .data
-    hint: 'filter, e.g, Voynov & International'
+    hint: 'filter, e.g, Artemov & International'
 ---
 {%- assign projects = site.projects | where_exp: 'project', 'project.path contains "_projects/3ddl"' %}
 {%- include _content/projects/project_list.html projects=projects %}
